--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "core-js": "^2.6.9",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "js-yaml": "^3.13.1",
     "lodash": "^4.17.13",
     "ng2-dnd": "^5.0.2",
     "ng2-dragula": "^2.1.1",
